merge of branches ddhapt and schemarefactor, currently unstable